Fix home cloud broken on mobile from d08c57d3c90d275c94989dfbf4df9b66a943ef65

--- a/_sass/homecloud.scss
+++ b/_sass/homecloud.scss
@@ -70,6 +70,10 @@
             &.selected{
                 font-size: 42px;
             }
+
+            &.thing-link{
+                font-size: 44px;
+            }
         }
     }
 }
